# hetcons

./: .gitignore  LICENSE  README.md  hetcons.cabal  stack.yaml
app/: Main.hs
app/Demo/: Client.hs  CreateConfig.hs  Observer.hs  Participant.hs
src/Hetcons/: Compact_Server.hs  Conflicting_2as.hs  Contains_Value.hs  Debug.hs  Hetcons_Exception.hs  Hetcons_State.hs  Instances_1a.hs  Instances_1b_2a.hs  Instances_2b.hs  Instances_Proof_of_Consensus.hs  Instances_of_To_Hetcons_Message.hs  Memoize.hs  Observer.hs  Parsable.hs  Participant.hs  Phase_2a.hs  Quorums.hs  Receive.hs  Receive_Message.hs  Send.hs  Send_Message_IO.hs  Serializable.hs  Signed_Message.hs  Value.hs
src/Hetcons/Demo/: Client.hs  Observer.hs  Participant.hs
src/Thrift/: flatten_const.py  hetcons.thrift
src/Thrift/gen-hs/: Hetcons_Consts.hs  Hetcons_Observer.hs  Hetcons_Observer_Client.hs  Hetcons_Observer_Iface.hs  Hetcons_Participant.hs  Hetcons_Participant_Client.hs  Hetcons_Participant_Iface.hs  Hetcons_Types.hs
test/: Spec.hs  cert.pem  cert1.pem  cert2.pem  cert3.pem  cert4.pem  cert5.pem  cert6.pem  cert7.pem  cert8.pem  cert9.pem  csr.csr  key.pem  key1.pem  key2.pem  key3.pem  key4.pem  key5.pem  key6.pem  key7.pem  key8.pem  key9.pem
test/Test/: Conflicting_2as.hs  Consensus.hs  Hetcons_Exception.hs  Observer.hs  Participant.hs  Quorums.hs  Signed_Message.hs  Util.hs  Witness.hs
