name:                hetcons
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/isheff/hetcons#readme
license:             MIT
license-file:        LICENSE
author:              Isaac Sheff
maintainer:          isheff@cs.cornell.edu
copyright:           2017 Isaac Sheff
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Thrift/gen-hs
  exposed-modules:     Lib
                     , Hetcons.Conflicting_2as
                     , Hetcons.Contains_Value
                     , Hetcons.Hetcons_Exception
                     , Hetcons.Hetcons_State
                     , Hetcons.Instances_1a
                     , Hetcons.Instances_1b_2a
                     , Hetcons.Instances_2b
                     , Hetcons.Instances_Proof_of_Consensus
                     , Hetcons.Memoize
                     , Hetcons.Observer
                     , Hetcons.Participant
                     , Hetcons.Quorums
                     , Hetcons.Receive
                     , Hetcons.Receive_Message
                     , Hetcons.Send
                     , Hetcons.Send_Message_IO
                     , Hetcons.Serializable
                     , Hetcons.Signed_Message
                     , Hetcons.Value
                     -- BEGIN THRIFT GENERATED SOURCE
                     , Hetcons_Consts
                     , Hetcons_Observer
                     , Hetcons_Observer_Client
                     , Hetcons_Observer_Iface
                     , Hetcons_Participant
                     , Hetcons_Participant_Client
                     , Hetcons_Participant_Iface
                     , Hetcons_Types
                     -- END THRIFT GENERATED SOURCE
  build-depends:       base >= 4.7 && < 5
                     , cereal
                     , mtl
                     , either
                     , stm
                     , vector
                     , either
                     , ctrie
                     , network
                     , monad-parallel
                     , thyme
                     , EasyX509
                     , cryptonite
                     -- BEGIN THRIFT REQUIREMENTS
                     , thrift >= 1.0.0
                     , QuickCheck
                     , vector
                     , unordered-containers
                     , text
                     , hashable
                     , bytestring
                     -- END THRIFT REQUIREMENTS
  default-language:    Haskell2010

executable hetcons-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hetcons
  default-language:    Haskell2010

test-suite hetcons-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Conflicting_2as
                     , Test.Consensus
                     , Test.Hetcons_Exception
                     , Test.Observer
                     , Test.Participant
                     , Test.Quorums
                     , Test.Signed_Message
  main-is:             Spec.hs
  build-depends:       base
                     , hetcons
                     , HUnit
                     , cryptonite
                     , cereal
                     , either
                     , mtl
                     , network
                     , unordered-containers
                     , transformers
                     , bytestring
                     , text
                     -- BEGIN THRIFT REQUIREMENTS
                     , thrift >= 1.0.0
                     , QuickCheck
                     , vector
                     , unordered-containers
                     , text
                     , hashable
                     , bytestring
                     -- END THRIFT REQUIREMENTS
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hetcons
